--- a/templates/new-search/ingredient-results.html
+++ b/templates/new-search/ingredient-results.html
@@ -292,9 +292,12 @@
         </details>
       </div>
 
-      <button class="nhsuk-button nhsuk-button--secondary nhsuk-u-float-right" id="reset-button" type="button">
-        Reset table
-      </button>
+<div class="nhsuk-grid-column-full" style="display: flex; justify-content: space-between; align-items: center;">
+<div lass="nhsuk-grid-column-one-half">  <p>Page 1 of 16 (1503 total results)</p> </div>
+  <button class="nhsuk-button nhsuk-button--secondary" id="reset-button" type="button">
+    Reset table
+  </button>
+</div>
 
       <table role="table-responsive" class="nhsuk-table-responsive " data-module="moj-sortable-table">
         <caption class="nhsuk-table__caption nhsuk-u-visually-hidden">Search Results</caption>
